# lethe

./: .gitignore  PLAN.md  README.md  pyproject.toml
cli/: lethe-audit
docs/: 00-charter.md  01-scns-memory-audit.md  01b-dream-daemon-design-note.md  02-synthesis.md  03-composition-design.md  04-eval-plan.md  05-scoring-design.md  06-api-design.md  07-migration-design.md  08-deployment-design.md  GO-NO-GO.md  HANDOFF.md  IMPLEMENTATION-followups.md  IMPLEMENTATION.md  QA-G1.md  QA-P1.md  QA-P2.md  QA-P3.md  QA-P4.md  QA-WS0-WS2.md  QA-WS3.md  QA-WS4.md  QA-WS5.md  QA-WS6.md  QA-WS7.md  QA-WS8.md
docs/02-lit-review/: 01-zep.md  02-magma.md  03-shibui-magma-guide.md  04-memory-as-metabolism.md  05-cognitive-weave.md  06-paper-list.md  07-memos.md  08-hipporag.md  09-a-mem.md  10-memevolve.md  11-memgpt.md  12-graphiti.md  13-graphiti-mcp.md  14-graphiti-issue-1300.md  15-letta.md  16-ms-agent-framework.md  17-qmd.md  18-longmemeval.md  19-locomo.md  20-dmr.md  21-karpathy-wiki.md  22-auto-memory.md
docs/03-gaps/: gap-01-retention-engine.md  gap-02-utility-feedback.md  gap-03-scoring-weights.md  gap-04-multi-agent-concurrency.md  gap-05-provenance-enforcement.md  gap-06-extraction-quality.md  gap-07-markdown-scale.md  gap-08-crash-safety.md  gap-09-non-factual-memory.md  gap-10-peer-messaging.md  gap-11-forgetting-as-safety.md  gap-12-intent-classifier.md  gap-13-contradiction-resolution.md  gap-14-eval-set-bias.md
scripts/eval/: README.md  run_eval.py
src/lethe/: __init__.py
tests/: conftest.py
tests/api/: test_api_import.py  test_api_locked_for_p1.py  (+3 more)
(+118 files in other folders)
